Add more bots to runGame.sh